# histopathology-robustness-ihc

./: .gitignore  README.md  main.py  pyproject.toml
config/: base.yaml
config/experiments/: all_stains_combined.yaml
config/models/: efficientnet.yaml  resnet50.yaml  vit.yaml
dl_analysis_of_tumor_microenvironment_in_histopathology_images.egg-info/: PKG-INFO  SOURCES.txt
mlops/mlruns/0/: meta.yaml
mlops/mlruns/372621528952437021/: meta.yaml
mlops/mlruns/372621528952437021/8d700e5cca3a48c48f75bc93b11445e0/: meta.yaml
mlops/mlruns/372621528952437021/8d700e5cca3a48c48f75bc93b11445e0/params/: data.dataset_path_test  reports.figures
mlops/mlruns/372621528952437021/d1bbc593029d4109b17587d68d703af3/: meta.yaml
mlops/mlruns/372621528952437021/d1bbc593029d4109b17587d68d703af3/params/: checkpoints.monitor_metric  data.class_list  data.dataset_path_train  data.dataset_path_val  mlflow.experiment_name  mlflow.tracking_uri  reports.tables
mlops/mlruns/372621528952437021/d1bbc593029d4109b17587d68d703af3/tags/: mlflow.source.git.commit
scripts/: evaluate.py  train.py
src/data/: dataloader.py  dataset.py  transforms.py
src/dl_analysis_of_tumor_microenvironment_in_histopathology_images.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/evaluation/: evaluator.py  metrics.py  visualizer.py
src/models/: model.py
src/notebook/: eda.ipynb
src/training/: trainer.py
src/utils/: config.py  mlflow_utils.py  seed.py
