[project]
name = "dl-analysis-of-tumor-microenvironment-in-histopathology-images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.15.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0,<3",
    "pillow>=12.1.1",
    "protobuf>=4.21.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchcam>=0.3.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
